# BST-Test

./: .gitignore  CMakeLists.txt  README.md
SearchTrees/: SearchTrees.pro  aatree.cpp  aatree.hh  avltree.cpp  avltree.hh  binarysearchtree.cpp  binarysearchtree.hh  bstnode.hh  bsttree.hh  bsttree_template.cpp  main.cpp  randomvalue.cpp  randomvalue.hh  redblacktree.cpp  redblacktree.hh  timer.cpp  timer.hh  treetest.cpp  treetest.hh  treetesthelper.cpp  treetesthelper.hh
SearchTrees/old_version/: aatree.cpp  avltree.hh  binarysearchtree.cpp  binarysearchtree.hh  main.cpp  randomvalue.hh
SearchTrees/old_version 2/: SearchTrees.pro  aatree.hh  binarysearchtree.cpp  binarysearchtree.hh  randomvalue.cpp  treetest.cpp  treetest_template.cpp  treetesthelper.hh
SearchTrees/old_version_3/: SearchTrees.pro  avltree.cpp  main.cpp  timer.cpp  timer.hh  treetest.hh  treetest_template.cpp  treetesthelper.hh
results/: new_results.txt  new_results2.txt  results_1-9.txt  results_100.txt  results_10_1.txt  results_10_2.txt
src/: bstnode.hh  bstnode.tpp  bstnode_base.hh  bstnode_base.tpp  bstnode_metadata.hh  bstnode_metadata.tpp  bstnode_utils.hh  bstnode_utils.tpp  bsttree.hh  bsttrees.hh  main.cpp  redblackbalancer.hh  simplebstbalancer.cpp  simplebstbalancer.hh
